# DeepMuonReco

./: .gitignore  CLAUDE.md  README.md  environment.yaml  justfile  predict.py  pyproject.toml  setup-uv.fish  setup.fish  setup.sh  submit.py  train.py
.github/: copilot-instructions.md
.prompts/: git-commit.md
config/: config.yaml  tracker-track-selection_matched-muon.yaml  tracker-track-selection_run3.yaml  tracker-track-selection_wo-gem.yaml  tracker-track-selection_wo-rpc-gem.yaml  tracker-track-selection_wo-rpc.yaml  tracker_track_selection.yaml  tts.yaml  tts_run3.yaml  tts_wo-rpc-gem.yaml  tts_wo-rpc.yaml
config/callbacks/: cuda_memory_summary.yaml  default.yaml  early_stopping.yaml  model_checkpoint.yaml  stochastic_weight_averaging.yaml
config/criterion/: bce.yaml
config/criterion_reduction/: masked_mean.yaml
config/data/: default.yaml  p.yaml  pqv.yaml
config/datamodule/: default.yaml
config/debug/: default.yaml  sanity-check-verbose.yaml  sanity-check.yaml  test.yaml
config/exp/: default.yaml  pq.yaml  tracker-track-selection.yaml  tracker_track_selection.yaml
config/feature_set/: pq.yaml  pqv.yaml
config/logger/: aim.yaml  csv.yaml  default.yaml
config/lr_scheduler/: sgdr.yaml
config/metric/: default.yaml
config/misc/: default.yaml
config/model/: latent_attention.yaml  legacy_vanilla_transformer.yaml  (+3 more)
data/: sanity-check.h5
notebooks/: utils.py
scripts/: convert-root-to-hdf5.py  copy-to-hdfs.sh  hadd.sh  merge.fish  train-flatmu2024pu.sh  train-mu2024pu.sh  train-mu2024pu1M.sh  train-sanity-check.sh  train-ttbar2024pu.sh
(+95 files in other folders)
