[project]
name = "muonly"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.7.0",
    "tensordict>=0.8.3",
    "einops>=0.8.1",
    "lightning>=2.5.1",
    "torchmetrics>=1.7.3",
    "onnx",
    "onnxruntime",
    "aim",
    "h5py",
    "uproot",
    "hist",
    "matplotlib",
    "numpy",
    "pandas",
    "scikit-learn",
    "tqdm",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.2",
    "hydra-colorlog",
    "coolname",
    "htcondor",
]

[dependency-groups]
dev = [
    "ipykernel",
    "ruff",
]
